@@ -1,3 +1,7 @@
+drkns 25.09.2022 21:35:49 +0100 - build 769
+
+1. LuaFAR: GetSystemTime (from Shmuel).
+
 drkns 21.12.2021 17:10:10 +0000 - build 768
 
 1. Error in win.MoveFile.
